<resources>
    <string name="app_name">Slagalica</string>
    <string name="start_game">Započni igru</string>
    <string name="login_reg">Prijava/ Registracija</string>

    <string name="login_email">Email/ Korisničko ime</string>
    <string name="login_login">Prijavi se</string>
    <string name="login_reg_password">Lozinka</string>
    <string name="login_reg_cancel">Otkaži</string>

    <string name="reg_email">Email</string>
    <string name="reg_username">Korisničko ime</string>
    <string name="reg_password2">Ponovljena lozinka</string>
    <string name="reg_register">Registruj se</string>

    <string name="menu_open_nav">Open Navigation Drawer</string>
    <string name="menu_close_nav">Close Navigation Drawer</string>
    <string name="menu_home">Početna</string>
    <string name="menu_profile">Profil</string>
    <string name="menu_friends">Prijatelji</string>
    <string name="menu_rang">Rang lista</string>
    <string name="menu_notification">Obaveštenja</string>
    <string name="menu_settings">Podešavanja</string>
    <string name="menu_logout">Odjavi se</string>
    <string name="menu_user">Korisnik</string>
    <string name="menu_user_email">korisnik@gmail.com</string>

    <string name="games_player1">Igrač 1</string>
    <string name="games_player2">Igrač 2</string>
    <string name="games_points">Poeni:</string>
    <string name="games_description">Ovde ide opis igre</string>
    <string name="games_next">Odustani od igre</string>
    <string name="games_spojnica">Spojnice</string>
    <string name="games_korak_po_korak">Korak po korak</string>
    <string name="games_korak">Korak</string>
    <string name="games_answer">Odgovor</string>
    <string name="games_confirm">OK</string>
    <string name="games_end">Kraj igre</string>
    <string name="games_mojbroj">Moj broj</string>
    <string name="games_mojbroj_answer">\???</string>
    <string name="games_mojbroj_confirm">Potvrdi</string>
    <string name="games_mojbroj_plus">+</string>
    <string name="games_mojbroj_minus">-</string>
    <string name="games_mojbroj_multiple">x</string>
    <string name="games_mojbroj_divide">/</string>
    <string name="games_mojbroj_open">(</string>
    <string name="games_mojbroj_close">)</string>
    <string name="games_asocijacija">Asocijacije</string>
    <string name="games_asocijacija_A">A</string>
    <string name="games_asocijacija_A1">A1</string>
    <string name="games_asocijacija_A2">A2</string>
    <string name="games_asocijacija_A3">A3</string>
    <string name="games_asocijacija_A4">A4</string>
    <string name="games_asocijacija_B">B</string>
    <string name="games_asocijacija_B1">B1</string>
    <string name="games_asocijacija_B2">B2</string>
    <string name="games_asocijacija_B3">B3</string>
    <string name="games_asocijacija_B4">B4</string>
    <string name="games_asocijacija_C">C</string>
    <string name="games_asocijacija_C1">C1</string>
    <string name="games_asocijacija_C2">C2</string>
    <string name="games_asocijacija_C3">C3</string>
    <string name="games_asocijacija_C4">C4</string>
    <string name="games_asocijacija_D">D</string>
    <string name="games_asocijacija_D1">D1</string>
    <string name="games_asocijacija_D2">D2</string>
    <string name="games_asocijacija_D3">D3</string>
    <string name="games_asocijacija_D4">D4</string>
    <string name="games_ko_zna_zna">Ko zna zna</string>
    <string name="games_ko_zna_zna_question">Pitanje</string>
    <string name="games_ko_zna_zna_answer1">Odgovor1</string>
    <string name="games_ko_zna_zna_answer2">Odgovor2</string>
    <string name="games_ko_zna_zna_answer3">Odgovor3</string>
    <string name="games_ko_zna_zna_answer4">Odgovor4</string>
    <string name="games_skocko">Skocko</string>
    <string name="profile_opseg_ko_zna_zna">/50</string>
    <string name="profile_opseg_spojnice">/20</string>
    <string name="profile_opseg_asocijacije">/60</string>
    <string name="profile_opseg_skocko">/35</string>
    <string name="profile_opseg_korak_po_korak">/25</string>
    <string name="profile_opseg_moj_broj">/40</string>
    <string name="profile_prosek_osvojenih_bodova">\??</string>
    <string name="profile_broj_odigranih_partija">Broj odigranih partija:</string>
    <string name="profile_ukupan_broj_partija">\?</string>
    <string name="profile_pobeda">Pobeda:</string>
    <string name="profile_poraz">Poraz:</string>
    <string name="profile_procenat">\?%</string>
    <string name="games_mojbroj_stop">STOP</string>
    <string name="start_game_guest">Igraj kao gost</string>
    <string name="add_image">Dodaj sliku</string>
    <string name="save_image">Save</string>


</resources>