<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn = "navigation_view">

    <group
        android:checkableBehavior="single">

        <item
            android:id="@+id/menu_home"
            android:icon="@drawable/menu_home"
            android:title="@string/menu_home"/>

        <item
            android:id="@+id/menu_profile"
            android:icon="@drawable/menu_profile"
            android:title="@string/menu_profile"/>

        <item
            android:id="@+id/menu_notification"
            android:icon="@drawable/menu_notification"
            android:title="@string/menu_notification"/>

        <item
            android:id="@+id/menu_friends"
            android:icon="@drawable/menu_friends"
            android:title="@string/menu_friends"/>

        <item
            android:id="@+id/menu_rang"
            android:icon="@drawable/menu_range"
            android:title="@string/menu_rang"/>




    </group>
    <item
        android:title="">

        <menu>
            <item
                android:id="@+id/menu_settings"
                android:icon="@drawable/menu_settings"
                android:title="@string/menu_settings"/>
            <item
                android:id="@+id/menu_logout"
                android:icon="@drawable/menu_logout"
                android:title="@string/menu_logout"/>
        </menu>

    </item>

</menu>