<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".games.AsocijacijeActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <include layout="@layout/game_fragment_players"></include>

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:background="@color/fairy_tale">


            <LinearLayout
                android:id="@+id/linearLayout2"
                android:layout_width="match_parent"
                android:layout_height="110dp"
                android:layout_below="@id/linearLayout"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button_1"
                    android:layout_width="150dp"
                    android:layout_height="45dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="20dp"
                    android:text="@string/games_asocijacija_A1"
                    android:textSize="15sp" />

                <Button
                    android:id="@+id/button_5"
                    android:layout_width="150dp"
                    android:layout_height="45dp"
                    android:layout_marginLeft="25dp"
                    android:layout_marginRight="15dp"
                    android:text="@string/games_asocijacija_B1"
                    android:textSize="15sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout3"
                android:layout_width="match_parent"
                android:layout_height="110dp"
                android:layout_below="@id/linearLayout"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button_2"
                    android:layout_width="150dp"
                    android:layout_height="45dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="20dp"
                    android:text="@string/games_asocijacija_A2"
                    android:textSize="15sp" />

                <Button
                    android:id="@+id/button_6"
                    android:layout_width="150dp"
                    android:layout_height="45dp"
                    android:layout_marginLeft="25dp"
                    android:layout_marginRight="15dp"
                    android:text="@string/games_asocijacija_B2"
                    android:textSize="15sp" />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/linearLayout4"
                android:layout_width="match_parent"
                android:layout_height="110dp"
                android:layout_below="@id/linearLayout"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button_3"
                    android:layout_width="150dp"
                    android:layout_height="45dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="20dp"
                    android:text="@string/games_asocijacija_A3"
                    android:textSize="15sp" />

                <Button
                    android:id="@+id/button_7"
                    android:layout_width="150dp"
                    android:layout_height="45dp"
                    android:layout_marginLeft="25dp"
                    android:layout_marginRight="15dp"
                    android:text="@string/games_asocijacija_B3"
                    android:textSize="15sp" />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/linearLayout5"
                android:layout_width="match_parent"
                android:layout_height="110dp"
                android:layout_below="@id/linearLayout"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button_4"
                    android:layout_width="150dp"
                    android:layout_height="45dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="20dp"
                    android:text="@string/games_asocijacija_A4"
                    android:textSize="15sp" />

                <Button
                    android:id="@+id/button_8"
                    android:layout_width="150dp"
                    android:layout_height="45dp"
                    android:layout_marginLeft="25dp"
                    android:layout_marginRight="15dp"
                    android:text="@string/games_asocijacija_B4"
                    android:textSize="15sp" />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/linearLayout6"
                android:layout_width="match_parent"
                android:layout_height="110dp"
                android:layout_below="@id/linearLayout"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/input1"
                    android:layout_width="150dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="20dp"

                    android:background="@drawable/login_edittext_bkg"
                    android:hint="@string/games_answer"
                    android:padding="10dp"
                    android:textColorHint="@color/gray" />
                <EditText
                    android:id="@+id/input2"
                    android:layout_width="150dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:layout_marginLeft="25dp"
                    android:layout_marginRight="15dp"

                    android:background="@drawable/login_edittext_bkg"
                    android:hint="@string/games_answer"
                    android:padding="10dp"
                    android:textColorHint="@color/gray" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/input"
                    android:layout_width="280dp"
                    android:layout_height="48dp"
                    android:layout_gravity="center"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginTop="10dp"

                    android:background="@drawable/login_edittext_bkg"
                    android:hint="@string/games_answer"
                    android:padding="15dp"
                    android:textColorHint="@color/gray" />
                <Button
                    android:id="@+id/confirm"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/games_confirm"

                    />

            </LinearLayout>
            <LinearLayout
                android:id="@+id/linearLayout7"
                android:layout_width="match_parent"
                android:layout_height="110dp"
                android:layout_below="@id/linearLayout"
                android:layout_weight="1"
                android:gravity="center"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/input3"
                    android:layout_width="150dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="20dp"

                    android:background="@drawable/login_edittext_bkg"
                    android:hint="@string/games_answer"
                    android:padding="10dp"
                    android:textColorHint="@color/gray" />
                <EditText
                    android:id="@+id/input4"
                    android:layout_width="150dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:layout_marginLeft="25dp"
                    android:layout_marginRight="15dp"

                    android:background="@drawable/login_edittext_bkg"
                    android:hint="@string/games_answer"
                    android:padding="10dp"
                    android:textColorHint="@color/gray" />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/linearLayout8"
                android:layout_width="match_parent"
                android:layout_height="110dp"
                android:layout_below="@id/linearLayout"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button_9"
                    android:layout_width="150dp"
                    android:layout_height="45dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="20dp"
                    android:text="@string/games_asocijacija_C1"
                    android:textSize="15sp" />

                <Button
                    android:id="@+id/button_13"
                    android:layout_width="150dp"
                    android:layout_height="45dp"
                    android:layout_marginLeft="25dp"
                    android:layout_marginRight="15dp"
                    android:text="@string/games_asocijacija_D1"
                    android:textSize="15sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout9"
                android:layout_width="match_parent"
                android:layout_height="110dp"
                android:layout_below="@id/linearLayout"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button_10"
                    android:layout_width="150dp"
                    android:layout_height="45dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="20dp"
                    android:text="@string/games_asocijacija_C2"
                    android:textSize="15sp" />

                <Button
                    android:id="@+id/button_14"
                    android:layout_width="150dp"
                    android:layout_height="45dp"
                    android:layout_marginLeft="25dp"
                    android:layout_marginRight="15dp"
                    android:text="@string/games_asocijacija_D2"
                    android:textSize="15sp" />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/linearLayout10"
                android:layout_width="match_parent"
                android:layout_height="110dp"
                android:layout_below="@id/linearLayout"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button_11"
                    android:layout_width="150dp"
                    android:layout_height="45dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="20dp"
                    android:text="@string/games_asocijacija_C3"
                    android:textSize="15sp" />

                <Button
                    android:id="@+id/button_15"
                    android:layout_width="150dp"
                    android:layout_height="45dp"
                    android:layout_marginLeft="25dp"
                    android:layout_marginRight="15dp"
                    android:text="@string/games_asocijacija_D3"
                    android:textSize="15sp" />
            </LinearLayout>
                <LinearLayout
                android:id="@+id/linearLayout11"
                android:layout_width="match_parent"
                android:layout_height="110dp"
                android:layout_below="@id/linearLayout"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button_12"
                    android:layout_width="150dp"
                    android:layout_height="45dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="20dp"
                    android:text="@string/games_asocijacija_C4"
                    android:textSize="15sp" />

                <Button
                    android:id="@+id/button_16"
                    android:layout_width="150dp"
                    android:layout_height="45dp"
                    android:layout_marginLeft="25dp"
                    android:layout_marginRight="15dp"
                    android:text="@string/games_asocijacija_D4"
                    android:textSize="15sp" />
            </LinearLayout>
        </LinearLayout>



        <Button
            android:id="@+id/button_next"
            android:layout_width="90dp"
            android:layout_height="48dp"
            android:text="@string/games_next"
            android:textSize="10sp"
            android:layout_gravity="end"
            android:layout_marginRight="15dp"
            />
    </LinearLayout>

</RelativeLayout>