<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".login_registration.RegistrationFragment">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1200dp"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="180dp"
                android:layout_marginTop="40dp"
                android:src="@drawable/pic_splashnoback" />

            <EditText
                android:id="@+id/signup_email"
                android:layout_width="290dp"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:layout_marginTop="0dp"
                android:background="@drawable/login_edittext_bkg"
                android:drawableLeft="@drawable/login_person"
                android:drawablePadding="8dp"
                android:hint="@string/reg_email"
                android:padding="8dp"
                android:textColorHint="@color/gray"/>

            <EditText
                android:id="@+id/signup_username"
                android:layout_width="290dp"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:background="@drawable/login_edittext_bkg"
                android:drawableLeft="@drawable/login_person"
                android:drawablePadding="8dp"
                android:hint="@string/reg_username"
                android:padding="8dp"
                android:textColorHint="@color/gray"/>

            <EditText
                android:id="@+id/signup_password"
                android:layout_width="290dp"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:background="@drawable/login_edittext_bkg"
                android:drawableLeft="@drawable/login_lock"
                android:drawablePadding="8dp"
                android:hint="@string/login_reg_password"
                android:inputType="textPassword"
                android:padding="8dp"
                android:textColorHint="@color/gray"/>

            <EditText
                android:id="@+id/signup_confirm"
                android:layout_width="290dp"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:background="@drawable/login_edittext_bkg"
                android:drawableLeft="@drawable/login_lock"
                android:drawablePadding="8dp"
                android:hint="@string/reg_password2"
                android:inputType="textPassword"
                android:padding="8dp"
                android:textColorHint="@color/gray"/>

            <Button
                android:id="@+id/signup_button"
                android:layout_width="250dp"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:text="@string/reg_register"
                android:textSize="18sp"
                app:cornerRadius="30dp" />

            <Button
                android:id="@+id/cancel_signup_button"
                android:layout_width="250dp"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:text="@string/login_reg_cancel"
                android:textSize="18sp"
                app:cornerRadius="30dp" />

        </LinearLayout>

    </LinearLayout>
