<?xml version="1.0" encoding="utf-8"?>
    <ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".menu.ProfileFragment">


        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="70dp"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            app:cardCornerRadius="30dp"
            app:cardElevation="20dp">

            <Button
                android:id="@+id/logout"
                android:drawableLeft="@drawable/menu_logout"
                android:text="@string/menu_logout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="8sp"
                android:layout_gravity="end"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="650dp"
                android:orientation="vertical"
                android:layout_gravity="center_horizontal"
                android:background = "@drawable/pic_walle_eve_dark_sky2"
                android:padding="20dp">


                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:scaleType="fitXY"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:id="@+id/uploadImage"
                    android:src="@drawable/pic_eve_icon_circle" />

                <TextView
                    android:layout_marginTop="20dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/menu_user"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:paddingLeft="25dp"
                    android:paddingBottom="5dp"
                    android:textSize="18sp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:text="@string/menu_user_email"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:paddingLeft="25dp"/>


            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </ScrollView>